# mcp-server-automation

./: .gitignore  HowToRun.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cursor/rules/: capabilities.mdc  save-token.mdc
src/: server.ts
src/routes/: test-cases.ts
src/services/: ai.service.ts  prompt.service.ts  runner.service.ts  testiny.service.ts
src/types/: test-case.type.ts
src/utils/: smart_ios.py
tests/unit/: ai.service.test.ts
